# popup

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  .vimspector.json  CMakeLists.txt  Taskfile.yml  conanfile.py  cpp.yml  flake.nix
cmake/: ProjectSettings.cmake  ProjectVersion.cmake
src/: CMakeLists.txt  main.cpp  version.hpp
src/cpp/: CMakeLists.txt  helpers.hpp  main.cpp  oxidize.hpp  types.hpp  version.hpp
src/rust/: Cargo.toml  build.rs
src/rust/src/: lib.rs
