file(GLOB_RECURSE ${PROJECT_NAME}_SOURCES CONFIGURE_DEPENDS *.cpp)
file(GLOB_RECURSE ${PROJECT_NAME}_HEADER CONFIGURE_DEPENDS *.hpp)

add_executable(${PROJECT_NAME} ${${PROJECT_NAME}_SOURCES} ${${PROJECT_NAME}_HEADER})
target_link_libraries(${PROJECT_NAME} PRIVATE Qt6::Widgets spdlog::spdlog CLI11::CLI11)
install(TARGETS ${PROJECT_NAME})
